; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_colocation_utils.c_ColocatedTableList.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_colocation_utils.c_ColocatedTableList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NIL = common dso_local global i32* null, align 8
@INVALID_COLOCATION_ID = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ColocatedTableList(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i64 @TableColocationId(i32 %6)
  store i64 %7, i64* %4, align 8
  %8 = load i32*, i32** @NIL, align 8
  store i32* %8, i32** %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @INVALID_COLOCATION_ID, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %3, align 4
  %15 = call i32* @lappend_oid(i32* %13, i32 %14)
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %5, align 8
  store i32* %16, i32** %2, align 8
  br label %21

17:                                               ; preds = %1
  %18 = load i64, i64* %4, align 8
  %19 = call i32* @ColocationGroupTableList(i64 %18)
  store i32* %19, i32** %5, align 8
  %20 = load i32*, i32** %5, align 8
  store i32* %20, i32** %2, align 8
  br label %21

21:                                               ; preds = %17, %12
  %22 = load i32*, i32** %2, align 8
  ret i32* %22
}

declare dso_local i64 @TableColocationId(i32) #1

declare dso_local i32* @lappend_oid(i32*, i32) #1

declare dso_local i32* @ColocationGroupTableList(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
